works with markdown

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -15,3 +15,11 @@
 <% end %>
 
 <%= link_to("Cancel", articles_path) %>
+
+<!-- <%= javascript_tag do %>
+$(document).ready(function() {
+  editor = ace.edit('article_content');
+  editor.setTheme("ace/theme/monokai");
+  editor.getSession().setMode("ace/mode/javascript");
+  });
+<% end %> -->
